--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -93,7 +93,7 @@
   left: 123px;
   top: 694px;
 
-  /* background: url(image.png); */
+  /* background: url(./png/image.png); */
   border-radius: 10px;
 }
 .img-b {
