fix name bug? add it to workspace

--- a/list/src/component/List.css
+++ b/list/src/component/List.css
@@ -1,21 +1,19 @@
 .Logoclass {
-  padding: 20px;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .vec {
   width: 15.83px;
   height: 15.37px;
-
   background: #fd4304;
+  overflow: hidden;
 }
 .vec2 {
   width: 15.83px;
   height: 15.43px;
 
   background: #14d8c4;
-  background-blend-mode: darken;
+  overflow: hidden;
+  /* background-blend-mode: darken; */
 }
 
 .cont {
@@ -28,6 +26,12 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+}
+.ulka {
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  flex-direction: row;
 }
 .dec {
   margin: auto;
